deployments/pre/header_middleware-pre.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-forwarded-proto
  namespace: net-pre
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
