deployments/pre/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: net-haep #NAMESPACE
