deployments/pre/deployment-phpmyadmin-pre.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-net #Only change the word "changeme"
  namespace: net-pre #NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-net #Only change the word "changeme"
  template:
    metadata:
      labels:
        app: admin-net #Only change the word "changeme"
    spec:
      imagePullSecrets:
      - name: my-docker-credentials
      containers:
        - name: admin-net #Only change the word "changeme"
          image: udeccolima/phpmyadmin:net-pre #phpmyadmin image
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: sessions
              mountPath: /sessions
      volumes:
        - name: sessions
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: admin-net  #Only change the word "changeme"
  namespace: net-pre #NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: admin-net #Only change the word "changeme"
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
