deployments/pre/deployment-pre.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: net
  namespace: net-pre
  labels:
    app: net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: net
  template:
    metadata:
      labels:
        app: net
    spec:
      imagePullSecrets:
      - name: my-docker-credentials
      containers:
      - name: net
        image: udeccolima/net:simplesaml-pre 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: net
  namespace: net-pre
spec:
  selector:
    app: net
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 8080 
  type: ClusterIP
