deployments/pre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  namespace: net-haep
  labels:
    app: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      imagePullSecrets:
      - name: my-docker-credentials
      containers:
      - name: helloworld
        image: udeccolima/net:pre  
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: net-haep
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 8080 
  type: ClusterIP
