deployments/pre/statefulset-pre.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-net #Name for mysql service must be the same here and in the SVC
  namespace: net-pre #NAMESPACE
spec:
  serviceName: "mysql-net" #Name for mysql service
  replicas: 1
  selector:
    matchLabels:
      app: mysql-net #Name for mysql service
  template:
    metadata:
      labels:
        app: mysql-net  #Name for mysql service
    spec:
      containers:
        - name: mysql-net  #Name for mysql service
          image: mysql:8.1  #Docker Image
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: net-mysql-pvc # REFERENCE: PVC NAME in storage yaml
              mountPath: /var/lib/mysql
            - name: net-mysql-scripts  #Reference NAME = 1
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: net-mysql-pvc # REFERENCE: PVC NAME in storage yaml
          persistentVolumeClaim:
            claimName: net-mysql-pvc # REFERENCE: PVC NAME in storage yaml
        - name: net-mysql-scripts  #Reference NAME = 1
          configMap:
            name: import-net-scripts  #REFERENCE: Is the name from the script in the configmap
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-net-pre #Name for mysql service must be the same here and in the mysql deployment
  namespace: net-pre #NAMESPACE
spec:
  selector:
    app: mysql-net #Name for mysql service
  type: ClusterIP
  ports:
    - name: mysql-net #Name for mysql service
      port: 3306
